# MetaGlyph

./: README.md  config.json  create_instances.py  pyproject.toml  run_pipeline.py
outputs/claude-haiku-4.5/1_selection_classification/: sel_0000_ASCII_DSL.txt  sel_0000_CTRL.txt  sel_0000_CTRL_RANDOM.txt  sel_0000_MG.txt  sel_0001_ASCII_DSL.txt  sel_0001_CTRL.txt  sel_0001_CTRL_RANDOM.txt  sel_0001_MG.txt  sel_0001_NL_SHORT.txt  sel_0002_ASCII_DSL.txt  sel_0002_CTRL.txt  sel_0002_CTRL_RANDOM.txt  sel_0002_MG.txt  sel_0003_ASCII_DSL.txt  sel_0003_CTRL.txt  sel_0003_CTRL_RANDOM.txt  sel_0003_MG.txt  sel_0004_ASCII_DSL.txt  sel_0004_CTRL.txt  (+226 more)
src/metaglyph/: __init__.py  cli.py  conditions.py  create_instances.py  pipeline.py
summary/: stats.json
summary/tables/: accuracy_claude-haiku-4.5.csv  accuracy_gemini-3.1-flash-lite.csv  accuracy_gemma-3-12b.csv  accuracy_gpt-5.2-chat.csv  accuracy_kimi-k2.csv  accuracy_llama-3.2-3b.csv  accuracy_llama-4-maverick.csv  accuracy_olmo-3.1-32b-instruct.csv  accuracy_qwen3-4b.csv  comparison_claude-haiku-4.5.csv  comparison_gemini-3.1-flash-lite.csv  comparison_gemma-3-12b.csv  comparison_gpt-5.2-chat.csv  comparison_kimi-k2.csv  comparison_llama-3.2-3b.csv  comparison_llama-4-maverick.csv  comparison_olmo-3.1-32b-instruct.csv  comparison_qwen3-4b.csv  fidelity_claude-haiku-4.5.csv  fidelity_gemini-3.1-flash-lite.csv  fidelity_gemma-3-12b.csv  fidelity_gpt-5.2-chat.csv  fidelity_kimi-k2.csv  fidelity_llama-3.2-3b.csv  fidelity_llama-4-maverick.csv  fidelity_olmo-3.1-32b-instruct.csv  fidelity_qwen3-4b.csv  token_comparison.csv
(+14488 files in other folders)
